fix: truncate adorner text
Related to https://github.com/camunda/camunda-modeler/issues/3381

--- a/packages/form-js-viewer/assets/form-js.css
+++ b/packages/form-js-viewer/assets/form-js.css
@@ -178,6 +178,8 @@
   width: auto !important;
   min-width: 34px;
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .fjs-container .fjs-input-adornment svg {
